2011-10-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaR5classes.R (##   f): Block recursive call to <<Changed>>
	handler when setting value of gedit object. (Thanks Pat)

2011-10-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/common.R (loadGWidgetIcons): remove assignInNamespace for
	2.14.0. Thanks Erich

2011-10-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/zzz.R (.onLoad): modfication to avoid loading methods package

2011-07-31  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/tcltkFuns.R (getTopLevel): added generics to implement $, [[
	and [[<- to interact with underlying object

2011-07-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/zzz.R (.onLoad): changed icons for gcheckboxtable. Thanks to
	http://ryanfait.com/resources/custom-checkboxes-and-radio-buttons/

2011-07-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R (gbasicdialog): Added do.buttons option to
	constructor (passed through ... of constructor). Added dispose
	method to delete dialog.

2011-07-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgrouptable.R: added (hacked) gcheckboxgroup with
	use.table option. Needs better images, along with button enter,
	but is working. 

	* R/aaaR5classes.R: added base gComponentR5tcltk methods, factored
	out similar ones in child classes

2011-07-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R: fix to handler to open new values (use W not tr global)

	* R/gtable.R (.populateTable): clean up this function

2011-07-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R: worked on size issue of this widget. Cross my fingers...

2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* DESCRIPTION (Version): version bump (45)

	* R/gcalendar.R: fixed gcalendar. It had issues when used within glayout.b

	* R/aaaR5classes.R: fix to gradio if items is logical
