@@ -5,6 +5,8 @@ NEWS for gWidgetstcltk
 Changes for 0.0-48
 -------------------
  
+* fixed bug with user-defined icons (Thanks Erich)
+* 
 
 Changes for 0.0-47
 -------------------
